# tapes

./: .gitignore  .ocamlformat  .op.kate-swp  .traced.kate-swp  1  3  4  5  6  Makefile  README.md  aaaa  aaaaaa  adapter_thing  bbbb  create_tape.sh  deps-modules.dot  deps-packages.dot  dune-project  example1  example2  figure.txt  formula  formula.tapes  gcd_algorithm  hoare.tapes  imp_euclid_byhand  intersection  inv  lhs  lhs_example.tex  matrix  nfthing  non_inv  op  other.tapes  program_hoare.tex  res.txt  rhs  rhs_handcrafted.tex  (+3 more)
_build/: .db  .digest-db  log
_docs/: 1. technical background.tex  2. language.tex  3. drawing.tex  appendix.tex  docs.aux  docs.tex  drawing_macros.tex  macros.tex
inclusion_tests_fail/: 1.tapes
inclusion_tests_ok/: 1.tapes
lib/: advanced_draw.ml  ast.ml  common_defs.ml  draw.ml  draw_utils.ml  dune  environment.ml  errors.ml  finset_conspan.ml  fol_encoding.ml  hg_cospan.ml  hoare_triples.ml  imp.ml  lexer.ml  matrix.ml  parser.mly  relations.ml  rewrite.ml  tape_inclusion.ml  tapes.ml  term_to_tape.ml  terms.ml  typecheck.ml
problems/: .0.kate-swp  .1.kate-swp  .2.kate-swp  0  1  2  3
result_examples/: 2  R  aaa  auauauo  banana  bbbb  big_copy  big_test_matrix  big_test_sum  bot  broken_cospan  cap  codiscard  commut_1  copy  cospan2  cospan_test  counter_oca  cup  discard  distributor  does  does_this_work  euclid  euclid_xy  euclid_xy_nf  example_before_nf.tex  example_mit_nf  example_nf.tex  factorial  factorio  fun_test  gen  gen_test  generators.txt  ide  kleene_test  matrix  oca  output_drawing.txt  (+33 more)
test/: dune
(+84 files in other folders)
